feat(BA-2488): Add `scan`, `import` trigger API schema on remote reservoir registry  (#6027)
