# docs/manager/rest-reference/openapi.json
@@ -1891,6 +1891,26 @@
         "description": "\n**Preconditions:**\n* User privilege required.\n"
       }
     },
+    "/artifact-registries/delegation/scan": {
+      "post": {
+        "operationId": "artifact-registries.delegate_scan_artifacts",
+        "tags": [
+          "artifact-registries"
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response"
+          }
+        },
+        "security": [
+          {
+            "TokenAuth": []
+          }
+        ],
+        "parameters": [],
+        "description": "\n**Preconditions:**\n* User privilege required.\n"
+      }
+    },
     "/artifact-registries/search": {
       "post": {
         "operationId": "artifact-registries.search_artifacts",
