# src/ai/backend/manager/api/artifact_registry.py
@@ -21,6 +21,7 @@ from ai.backend.manager.data.artifact.types import (
 )
 from ai.backend.manager.dto.context import ProcessorsCtx
 from ai.backend.manager.dto.request import (
+    DelegateScanArtifactsReq,
     ScanArtifactModelPathParam,
     ScanArtifactModelQueryParam,
     ScanArtifactModelsReq,
@@ -28,11 +29,13 @@ from ai.backend.manager.dto.request import (
     SearchArtifactsReq,
 )
 from ai.backend.manager.dto.response import (
+    DelegateScanArtifactsResponse,
     RetreiveArtifactModelResponse,
     ScanArtifactModelsResponse,
     ScanArtifactsResponse,
     SearchArtifactsResponse,
 )
+from ai.backend.manager.services.artifact.actions.delegate_scan import DelegateScanArtifactsAction
 from ai.backend.manager.services.artifact.actions.list_with_revisions import (
     ListArtifactsWithRevisionsAction,
 )
@@ -72,6 +75,38 @@ class APIHandler:
                 ArtifactDataWithRevisionsResponse.from_artifact_with_revisions(artifact)
                 for artifact in action_result.result
             ],
+        )
+        return APIResponse.build(status_code=HTTPStatus.OK, response_model=resp)
+
+    @auth_required_for_method
+    @api_handler
+    async def delegate_scan_artifacts(
+        self,
+        body: BodyParam[DelegateScanArtifactsReq],
+        processors_ctx: ProcessorsCtx,
+    ) -> APIResponse:
+        processors = processors_ctx.processors
+        action_result = await processors.artifact.delegate_scan.wait_for_complete(
+            DelegateScanArtifactsAction(
+                delegator_reservoir_id=body.parsed.delegator_reservoir_id,
+                artifact_type=body.parsed.artifact_type,
+                search=body.parsed.search,
+                order=ModelSortKey.DOWNLOADS,
+                delegatee_target=body.parsed.delegatee_target
+                if body.parsed.delegatee_target
+                else None,
+                limit=body.parsed.limit,
+            )
+        )
+
+        resp = DelegateScanArtifactsResponse(
+            artifacts=[
+                ArtifactDataWithRevisionsResponse.from_artifact_with_revisions(artifact)
+                for artifact in action_result.result
+            ],
+            source_registry_id=action_result.source_registry_id,
+            source_registry_type=action_result.source_registry_type,
+            readme_data=action_result.readme_data,
         )
         return APIResponse.build(status_code=HTTPStatus.OK, response_model=resp)
 
@@ -157,6 +192,7 @@ def create_app(
     cors = aiohttp_cors.setup(app, defaults=default_cors_options)
     api_handler = APIHandler()
     cors.add(app.router.add_route("POST", "/scan", api_handler.scan_artifacts))
+    cors.add(app.router.add_route("POST", "/delegation/scan", api_handler.delegate_scan_artifacts))
     cors.add(app.router.add_route("POST", "/search", api_handler.search_artifacts))
 
     cors.add(app.router.add_route("GET", "/model/{model_id}", api_handler.scan_single_model))
